Security Configuration fix